force-app/main/default/objects/docutizexa__BackgroundProcessingEvent__e/docutizexa__BackgroundProcessingEvent__e.object-meta.xml
<CustomObject>
    <label>バックグラウンド処理イベント</label>
</CustomObject>