force-app/main/default/objects/docutizexa__BackgroundProcessingEvent__e/fields/docutizexa__fs_ClassName__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__fs_ClassName__c</fullName>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>