force-app/main/default/objects/docutizexa__BackgroundProcessingEvent__e/fields/docutizexa__fs_ErrorMessageOverview__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__fs_ErrorMessageOverview__c</fullName>
    <label>Error Message (Overview)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>