force-app/main/default/objects/docutizexa__BackgroundProcessingEvent__e/fields/docutizexa__fs_ExecutionCondition__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__fs_ExecutionCondition__c</fullName>
    <label>Execution Condition</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>