force-app/main/default/objects/docutizexa__BackgroundProcessingEvent__e/fields/docutizexa__fs_IsCreatedHistory__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__fs_IsCreatedHistory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create BackGroundProcessingHistory</label>
    <type>Checkbox</type>
</CustomField>