force-app/main/default/objects/docutizexa__BackgroundProcessingEvent__e/fields/docutizexa__fs_IsNotificationHistory__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__fs_IsNotificationHistory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create History Notification</label>
    <type>Checkbox</type>
</CustomField>