force-app/main/default/objects/docutizexa__BackgroundProcessingEvent__e/fields/docutizexa__fs_JobId__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__fs_JobId__c</fullName>
    <label>JobId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>