force-app/main/default/objects/docutizexa__BackgroundProcessingEvent__e/fields/docutizexa__fs_NotificationBody__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__fs_NotificationBody__c</fullName>
    <label>Notification Body</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>