force-app/main/default/objects/docutizexa__BackgroundProcessingEvent__e/fields/docutizexa__fs_NotificationTitle__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__fs_NotificationTitle__c</fullName>
    <label>Notification Title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>