force-app/main/default/objects/docutizexa__BackgroundProcessingEvent__e/fields/docutizexa__fs_ParentHistoryId__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__fs_ParentHistoryId__c</fullName>
    <label>Parent Background Processing History Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>