force-app/main/default/objects/docutizexa__BackgroundProcessingEvent__e/fields/docutizexa__fs_ParentUuid__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__fs_ParentUuid__c</fullName>
    <label>Parent Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>