force-app/main/default/objects/docutizexa__BackgroundProcessingEvent__e/fields/docutizexa__fs_Result__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__fs_Result__c</fullName>
    <label>Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>