force-app/main/default/objects/docutizexa__BackgroundProcessingEvent__e/fields/docutizexa__fs_TargetInfo__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__fs_TargetInfo__c</fullName>
    <label>Target Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>