force-app/main/default/objects/docutizexa__BackgroundProcessingEvent__e/fields/docutizexa__fs_UpdateTargetUuid__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__fs_UpdateTargetUuid__c</fullName>
    <label>Update Target Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>